--- a/CSS/style.css
+++ b/CSS/style.css
@@ -923,6 +923,7 @@ body[data-page="about"] footer {
       animation: bounce 1.7s linear infinite;
       transition: all .5s ease-in-out;
       left: 50%;
+        transform: translateX(-50%);
       top: 85%;
       z-index: 11;
     }
